(fix) O3-4519 Stock Management ESM: Header gets distorted in add stock user role scope view

--- a/src/stock-user-role-scopes/add-stock-user-scope/add-stock-user-role-scope.scss
+++ b/src/stock-user-role-scopes/add-stock-user-scope/add-stock-user-role-scope.scss
@@ -38,3 +38,15 @@
 .checkbox {
   width: 100%;
 }
+
+.buttonSet {
+  width: 100%;
+  padding-top: spacing.$spacing-05;
+  justify-content: space-between;
+  bottom: 0;
+  position: absolute;
+  & > button {
+    max-width: 50% !important;
+    width: 50%;
+  }
+}
